--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   shared_preferences: ^2.2.2
   pedometer: ^4.1.1
   permission_handler: ^11.3.0
+  riverpod: ^2.6.1
+  flutter_riverpod: ^2.6.1
+  intl: ^0.19.0 # Added intl dependency
 
 dev_dependencies:
   flutter_test:
