--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,13 +37,12 @@ dependencies:
 
   geolocator: ^14.0.0
   http: ^1.2.0
-  provider: ^6.1.1
   shared_preferences: ^2.2.2
   pedometer: ^4.1.1
   permission_handler: ^11.3.0
-  riverpod: ^2.6.1
+#  riverpod: ^2.6.1
   flutter_riverpod: ^2.6.1
-  intl: ^0.19.0 # Added intl dependency
+#  intl: ^0.19.0 # Added intl dependency
 
 dev_dependencies:
   flutter_test:
